# exercism

./: .gitignore  Cargo.toml  README.md  makefile
rust/acronym/.exercism/: metadata.json
rust/acronym/src/: lib.rs
rust/all-your-base/.exercism/: metadata.json
rust/all-your-base/src/: lib.rs
rust/allergies/.exercism/: metadata.json
rust/allergies/src/: lib.rs
rust/alphametics/.exercism/: metadata.json
rust/alphametics/src/: lib.rs
rust/anagram/: Cargo.toml
rust/anagram/.exercism/: metadata.json
rust/anagram/src/: lib.rs
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs
rust/bob/: Cargo.toml
rust/bob/.exercism/: metadata.json
rust/bob/src/: lib.rs
rust/clock/.exercism/: metadata.json
rust/clock/src/: lib.rs
rust/collatz-conjecture/.exercism/: metadata.json
rust/collatz-conjecture/src/: lib.rs
rust/difference-of-squares/.exercism/: metadata.json
rust/difference-of-squares/src/: lib.rs
rust/diffie-hellman/.exercism/: metadata.json
rust/diffie-hellman/src/: lib.rs
rust/eliuds-eggs/.exercism/: metadata.json
rust/eliuds-eggs/src/: lib.rs
rust/gigasecond/.exercism/: metadata.json
rust/gigasecond/src/: lib.rs
rust/grains/.exercism/: metadata.json
rust/grains/src/: lib.rs
rust/high-scores/.exercism/: metadata.json
rust/high-scores/src/: lib.rs
rust/kindergarten-garden/.exercism/: metadata.json
rust/kindergarten-garden/src/: lib.rs
rust/proverb/: Cargo.toml
rust/raindrops/: Cargo.toml
(+26 files in other folders)
