[package]
name = "exercism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = [
    "rust/reverse-string",
    "rust/gigasecond",
    "rust/clock",
    "rust/anagram",
    "rust/space-age",
    "rust/sublist",
    "rust/minesweeper",
    "rust/luhn",
    "rust/armstrong-numbers",
    "rust/beer-song",
    "rust/difference-of-squares",
    "rust/grains",
    "rust/leap",
    "rust/nth-prime",
    "rust/prime-factors",
    "rust/proverb",
    "rust/raindrops",
    "rust/sum-of-multiples",
    "rust/bob",
    "rust/high-scores",
    "rust/matching-brackets",
    "rust/collatz-conjecture",
]